--- a/src/pages/nous-rejoindre.astro
+++ b/src/pages/nous-rejoindre.astro
@@ -3,9 +3,12 @@ import { applatirLieux, fetchGeoliens } from '../utils/geoliens';
 import PageBase from '../layout/page-base.astro';
 
 const hierarchie = await fetchGeoliens();
-const flat = applatirLieux(hierarchie);
+const flat = applatirLieux(hierarchie ?? []);
 ---
-<PageBase title="Nous rejoindre" description="Retrouvez les groupes et pages des Indignés sur les réseaux sociaux et plateformes alternatives." >
+<PageBase
+	title="Nous rejoindre"
+	description="Retrouvez les groupes et pages des Indignés sur les réseaux sociaux et plateformes alternatives."
+>
 	<div id="sidebar" />
 
 	<div id="content">
@@ -77,7 +80,7 @@ const flat = applatirLieux(hierarchie);
 	<script>
 		import { applatirLieux, fetchGeoliens } from '../utils/geoliens';
 
-		const hierarchie = (await fetchGeoliens()) ?? JSON.parse(document.getElementById('geoliens-results')?.dataset.flatlinks ?? '[]');
+		const hierarchie = (await fetchGeoliens());
 		const flat = applatirLieux(hierarchie);
 
 		// on intercepte les envois de formulaire
